--- a/index.html
+++ b/index.html
@@ -74,16 +74,15 @@
       <div class="position-absolute mt-3">
         <p class="img-fluid text-center"><img src="Assets/logo.png" alt=""></p>
 
-        <p class="text-light fw-semibold fst-italic shadow">
+        <p class="text-light fw-semibold fst-italic shadow bg-dark bg-opacity-25">
           Desde 2008, somos especializados na manutenção de veículos a Diesel.</p>
 
-        <p class="text-light fw-semibold fst-italic shadow">
+        <p class="text-light fw-semibold fst-italic shadow bg-dark bg-opacity-25">
           Trabalhamos com parceiros renomados como Bosch, Master Power, Radiadores Visconde e Mobil Delvac.</p>
 
-        <p class="text-light fw-semibold fst-italic shadow">
+        <p class="text-light fw-semibold fst-italic shadow bg-dark bg-opacity-25">
           Garantia de produtos e serviços de alta qualidade com o melhor custo-benefício para o seu veículo.</p>
       </div>
-
     </section>
   </main>
 </body>
