--- a/model.html
+++ b/model.html
@@ -47,7 +47,7 @@
         <div class="col p-1"><a href="#services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
         <div class="col p-1"><a href="contact.html" class="fw-semibold text-danger">CONTATO</a></div>
         <div class="col p-1"><a href="partners.html" class="fw-semibold text-danger">PARCEIROS</a></div>
-        <div class="col p-1"><a href="#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
+        <div class="col p-1"><a href="index.html#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
       </div>
     </div>
   </subheader>
@@ -64,27 +64,32 @@
       <img src="Assets/logo.png" alt="Logo" class="img-fluid me-3" style="max-width: 120px;">
       <ul class="list-unstyled d-flex mb-0">
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="index.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Início
           </a>
         </li>
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="store.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Produtos
           </a>
         </li>
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="services.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Serviços
           </a>
         </li>
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="contact.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Contato
           </a>
         </li>
         <li>
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="index.html#about-us"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Quem Somos
           </a>
         </li>
