--- a/store.html
+++ b/store.html
@@ -44,10 +44,10 @@
             <div class="row align-items-center text-center w-50 mx-auto p-1">
                 <div class="col p-1"><a href="index.html" class="fw-semibold text-danger">INÍCIO</a></div>
                 <div class="col p-1"><a href="store.html" class="fw-semibold text-danger">PRODUTOS</a></div>
-                <div class="col p-1"><a href="#services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
+                <div class="col p-1"><a href="services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
                 <div class="col p-1"><a href="contact.html" class="fw-semibold text-danger">CONTATO</a></div>
                 <div class="col p-1"><a href="partners.html" class="fw-semibold text-danger">PARCEIROS</a></div>
-                <div class="col p-1"><a href="#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
+                <div class="col p-1"><a href="index.html#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
             </div>
         </div>
     </subheader>
