--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,10 @@
       <div class="row align-items-center text-center w-50 mx-auto p-1">
         <div class="col p-1"><a href="index.html" class="fw-semibold text-danger">INÍCIO</a></div>
         <div class="col p-1"><a href="store.html" class="fw-semibold text-danger">PRODUTOS</a></div>
-        <div class="col p-1"><a href="#services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
+        <div class="col p-1"><a href="services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
         <div class="col p-1"><a href="contact.html" class="fw-semibold text-danger">CONTATO</a></div>
         <div class="col p-1"><a href="partners.html" class="fw-semibold text-danger">PARCEIROS</a></div>
-        <div class="col p-1"><a href="#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
+        <div class="col p-1"><a href="index.html#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
       </div>
     </div>
   </subheader>
@@ -60,7 +60,13 @@
 
     <div class="container">
       <div class="row w-75 mx-auto mb-5">
-        <div class="col"><img src="Assets/contact-imgs/maps.png" class="img-fluid shadow border border-light border-5">
+        <div class="col">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3474.512124152892!2d-49.90750402369278!3d-29.443052475231994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9522708e36ea5009%3A0xd8329b153dc93291!2sDIGITAL%20DIESEL%20Bosch%20Service!5e0!3m2!1spt-BR!2sbr!4v1726751444048!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade" id="embed-map"
+            class="img-fluid shadow border border-light border-5">
+          </iframe>
           <figcaption class="fst-italic fw-semibold">Av. Padre Rizzieri Delai, 2927 - Nossa Sra. Aparecida, Três
             Cachoeiras - RS, 95580-000</figcaption>
         </div>
@@ -184,31 +190,37 @@
       <img src="Assets/logo.png" alt="Logo" class="img-fluid me-3" style="max-width: 120px;">
       <ul class="list-unstyled d-flex mb-0">
         <li class="me-3">
-          <a href="#"
+          <a href="index.html"
             class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Início
           </a>
         </li>
         <li class="me-3">
-          <a href="#"
+          <a href="store.html"
             class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Produtos
           </a>
         </li>
         <li class="me-3">
-          <a href="#"
+          <a href="services.html"
             class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Serviços
           </a>
         </li>
         <li class="me-3">
-          <a href="#"
+          <a href="contact.html"
             class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Contato
           </a>
         </li>
+        <li class="me-3">
+          <a href="partners.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            Parceiros
+          </a>
+        </li>
         <li>
-          <a href="#"
+          <a href="index.html#about-us"
             class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Quem Somos
           </a>
