--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row align-items-center text-center w-50 mx-auto p-1">
         <div class="col p-1"><a href="index.html" class="fw-semibold text-danger">INÍCIO</a></div>
         <div class="col p-1"><a href="store.html" class="fw-semibold text-danger">PRODUTOS</a></div>
-        <div class="col p-1"><a href="#services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
+        <div class="col p-1"><a href="services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
         <div class="col p-1"><a href="contact.html" class="fw-semibold text-danger">CONTATO</a></div>
         <div class="col p-1"><a href="partners.html" class="fw-semibold text-danger">PARCEIROS</a></div>
         <div class="col p-1"><a href="#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
@@ -53,7 +53,7 @@
   </subheader>
 
   <main>
-    <section id="f-main" class="container text-center mb-5">
+    <div id="f-main" class="container text-center mb-5">
       <p class="fs-4 fw-semibold">MECÂNICA</p>
       <p class="fs-3 fw-lighter mb-5">À sua disposição para manutenção de seu veículo diesel</p>
 
@@ -62,7 +62,7 @@
         <div class="col"><img class="img-fluid" src="Assets/main-img-2.jpg" alt=""></div>
         <div class="col"><img class="img-fluid" src="Assets/main-img-3.jpg" alt=""></div>
       </div>
-    </section>
+    </div>
 
     <div class="container text-center">
       <p class="fs-4 fw-semibold">SOBRE A DIGITAL DIESEL</p>
@@ -93,27 +93,38 @@
       <img src="Assets/logo.png" alt="Logo" class="img-fluid me-3" style="max-width: 120px;">
       <ul class="list-unstyled d-flex mb-0">
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="index.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Início
           </a>
         </li>
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="store.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Produtos
           </a>
         </li>
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="services.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Serviços
           </a>
         </li>
         <li class="me-3">
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="contact.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Contato
           </a>
         </li>
+        <li class="me-3">
+          <a href="partners.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            Parceiros
+          </a>
+        </li>
         <li>
-          <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+          <a href="index.html#about-us"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Quem Somos
           </a>
         </li>
