--- a/store.html
+++ b/store.html
@@ -186,27 +186,38 @@
         <img src="Assets/logo.png" alt="Logo" class="img-fluid me-3" style="max-width: 120px;">
         <ul class="list-unstyled d-flex mb-0">
           <li class="me-3">
-            <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            <a href="index.html"
+              class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
               Início
             </a>
           </li>
           <li class="me-3">
-            <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            <a href="store.html"
+              class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
               Produtos
             </a>
           </li>
           <li class="me-3">
-            <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            <a href="services.html"
+              class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
               Serviços
             </a>
           </li>
           <li class="me-3">
-            <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            <a href="contact.html"
+              class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
               Contato
             </a>
           </li>
+          <li class="me-3">
+            <a href="partners.html"
+              class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+              Parceiros
+            </a>
+          </li>
           <li>
-            <a href="#" class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            <a href="index.html#about-us"
+              class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
               Quem Somos
             </a>
           </li>
