--- a/model.html
+++ b/model.html
@@ -44,7 +44,7 @@
       <div class="row align-items-center text-center w-50 mx-auto p-1">
         <div class="col p-1"><a href="index.html" class="fw-semibold text-danger">INÍCIO</a></div>
         <div class="col p-1"><a href="store.html" class="fw-semibold text-danger">PRODUTOS</a></div>
-        <div class="col p-1"><a href="#services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
+        <div class="col p-1"><a href="services.html" class="fw-semibold text-danger">SERVIÇOS</a></div>
         <div class="col p-1"><a href="contact.html" class="fw-semibold text-danger">CONTATO</a></div>
         <div class="col p-1"><a href="partners.html" class="fw-semibold text-danger">PARCEIROS</a></div>
         <div class="col p-1"><a href="index.html#about-us" class="fw-semibold text-danger">QUEM SOMOS</a></div>
@@ -85,6 +85,12 @@
           <a href="contact.html"
             class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
             Contato
+          </a>
+        </li>
+        <li class="me-3">
+          <a href="partners.html"
+            class="text-white-50 link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover fw-semibold">
+            Parceiros
           </a>
         </li>
         <li>
