--- a/contact.html
+++ b/contact.html
@@ -122,12 +122,12 @@
           </div>
 
           <div class="row mb-3">
-            <button class="btn btn-danger">Enviar</button>
+            <a href="contact-confirm.html" class="btn btn-danger">Enviar</a>
           </div>
         </div>
       </div>
 
-      <div class="container text-center">
+      <div id="opening-hours" class="container text-center">
         <p class="fs-4 fw-semibold">TABELA DE HORÁRIOS</p>
         <p class="fs-3 fw-lighter mb-5">Verifique a disponibilidade de atendimento</p>
       </div>
